--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -113,7 +113,7 @@
         margin: 0 auto;
         text-align: center;
     }
-
+        img { height: 150px; width: 150px; }
     /* Header + footer centered */
     header, footer {
         width: 100%;
