--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -20,7 +20,7 @@ button { font-size: 10px; }
 .artist-songs { display:flex; flex-wrap:wrap; gap:15px; }
 .song-card { width:250px; margin:10px; cursor:pointer; }
 .song-cover { width:100%; height:250px; object-fit:cover; }
-#modal-cover { width: 200px; height: 200px; }
+#modal-cover { max-width:200px; max-height:200px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;}
 
 
 
