--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -33,7 +33,7 @@ button { font-size: 10px; }
         margin: 0 auto;
         text-align: center;
     }
-    img { height: 150px; width: 150px; }
+    #modal-cover { max-width:150px; max-height:150px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;}
     /* Header + footer centered */
     header, footer {
         width: 100%;
