--- a/assignments/11-classes/css/a11styles.css
+++ b/assignments/11-classes/css/a11styles.css
@@ -20,9 +20,8 @@ button { font-size: 10px; }
 .artist-songs { display:flex; flex-wrap:wrap; gap:15px; }
 .song-card { width:250px; margin:10px; cursor:pointer; }
 .song-cover { width:100%; height:250px; object-fit:cover; }
-#modal-cover { max-width:200px; max-height:200px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;}
-
-
+#modalCover { max-width:200px; max-height:200px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;}
+                
 
 /* Mobile / Tablet Layout Under 1000px */
 @media screen and (max-width: 1000px) {
@@ -33,7 +32,7 @@ button { font-size: 10px; }
         margin: 0 auto;
         text-align: center;
     }
-    #modal-cover { max-width:150px; max-height:150px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;}
+    #modalCover { max-width:150px; max-height:150px; width:auto; height:auto; object-fit:cover; display:block; margin-bottom:10px;}
     /* Header + footer centered */
     header, footer {
         width: 100%;
