--- a/project/part5htmlcomplete/products/css/greenville.css
+++ b/project/part5htmlcomplete/products/css/greenville.css
@@ -10,7 +10,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #1a1a1a; /* near-black text */
     /* background-color: #f4f7f5;  soft gray-green background */
-    background-color: black; 
+    background-color: white; 
     width: 100%;
 }
 
