--- a/project/part5htmlcomplete/products/css/greenville.css
+++ b/project/part5htmlcomplete/products/css/greenville.css
@@ -5,6 +5,7 @@ h3 {
     margin-left: 30px;
     text-align: left;
     }
+h5 { font-size: 9pt;}
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
