--- a/project/part5htmlcomplete/deployments/css/greenville.css
+++ b/project/part5htmlcomplete/deployments/css/greenville.css
@@ -5,12 +5,13 @@ h3 {
     margin-left: 30px;
     text-align: left;
     }
+h5 { font-size: 9pt;}
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #1a1a1a; /* near-black text */
     /* background-color: #f4f7f5;  soft gray-green background */
-    background-color: black; 
+    background-color: white; 
     width: 100%;
 }
 
