--- a/project/part5htmlcomplete/licensing/css/greenville.css
+++ b/project/part5htmlcomplete/licensing/css/greenville.css
@@ -1,3 +1,4 @@
+a, li {font-size: 10pt;}
 h1 { margin-left: 30px;}
 h2 { margin-left: 30px;}
 h3 { 
@@ -10,7 +11,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #1a1a1a; /* near-black text */
     /* background-color: #f4f7f5;  soft gray-green background */
-    background-color: black; 
+    background-color: white; 
     width: 100%;
 }
 
