--- a/project/part5htmlcomplete/css/layout.css
+++ b/project/part5htmlcomplete/css/layout.css
@@ -401,12 +401,12 @@ max-height: 200px;
         max-width: 900px;
     }
 
-    .feature {
+    .feature-grid {
         width: 45%;
         max-width: 350px;
     }
 
-    .feature a img {
+    .feature-grid a img {
         width: 100%;
         height: auto;
     }
